@@ -76,6 +76,7 @@ struct mosq_config {
 	int filter_out_count; /* sub */
 	bool verbose; /* sub */
 	bool eol; /* sub */
+	bool oneshot; /* sub */
 #endif
 };
 
