@@ -17,6 +17,7 @@
 	<refsynopsisdiv>
 		<cmdsynopsis>
 			<command>mosquitto_sub</command>
+			<arg><option>-1</option></arg>
 			<arg><option>-A</option> <replaceable>bind_address</replaceable></arg>
 			<arg><option>-c</option></arg>
 			<arg><option>-d</option></arg>
@@ -90,6 +91,19 @@
 			currently some options cannot be negated, e.g.
 			<option>-S</option>.</para>
 		<variablelist>
+			<varlistentry>
+				<term><option>-1</option></term>
+				<listitem>
+					<para>Disconnect and exit the program immediately after the
+						first message is received. This may be useful in shell
+						scripts where on a single status value is required, for
+						example.</para>
+					<para>Combine with <option>-R</option> to print only the
+						first fresh message (i.e. that does not have the
+						retained flag set), or with <option>-T</option> to
+						filter which topics are processed.</para>
+				</listitem>
+			</varlistentry>
 			<varlistentry>
 				<term><option>-A</option></term>
 				<listitem>
