@@ -2,6 +2,7 @@
 
 Clients:
 - Both clients can now load default configuration options from a file.
+- Add -1 (oneshot) option to mosquitto_sub.
 
 1.3.2 - 2014xxxx
 ================
